  * Improve the algorithm of finding kernel modules and programs
    needed to mount the dump directory.
  * Pass the correct "sysrq=" argument to the kdump kernel.
  * Add support for RSA keys when saving over SSH.
  * Do not re-generate kdump initrd on boot. Instead, hook into the
    normal mkinitrd run.
  * Adjust init-script actions to match LSB better.

0.8.1
-----
  * Fix invalid syntax in CMakeLists.txt.
  * Fix manpage, the command is called read_ikconfig and not print_ikconfig.
  * Remove the documentation about the non-working network configuration in Xen
  * since that has been fixed meanwhile.
  * Make it possible to exit the shell spawned in the initrd with 'exit'
    to boot in the kdump system for debugging.

0.8.0
-----
  * Call asciidoc a2x with -L to fix manual page generation problems with
    asciidoc 8.3.x.

0.7.4
-----
  * Call 'mkinitrd' with the -B (don't update bootloader) option in mkdumprd(8).

0.7.3
-----
  * Document kdump problems on Xen.
  * Don't display the full mkinitrd output.
  * Warn about zero-size vmcore.
  * Default to the auto-detected kernel when mkdumprd is called without
    arguments instead of defaulting to the running kernel.
  * Parse VMCOREINFO_XEN when present with 'read_vmcoreinfo'.
  * Pass the kernel release of the crashed kernel via command line in case of
    Xen.
  * Improve error handling when no crash kernel release is available when saving
    the dump.

0.7.2
-----
  * Don't use the FQDN but only the hostname to avoid DNS lookups and errors on
    wrongly configured systems.
  * Fix empty KDUMP_SAVEDIR line when replacing the symbolic link with the
    absolute path.
  * Don't set sysctl kernel.unknown_nmi_panic=1 by default.
  * Mention kernel.panic_on_unrecovered_nmi in the kdump(7) manpage.

0.7.1
-----
  * Document 256M limit on ppc64 for large machines in kdump(7).

0.7.0
-----
  * Add read_ikconfig command.
  * Add find_kernel command in kdumptool, replacing the find code in the
    init script.