@@ -26,6 +26,8 @@
 #include "global.h"
 
 #define ISO_DATETIME "%Y-%m-%d-%H:%M"
+#define MD5SUM_LENGTH	16
+#define SHA1SUM_LENGTH	20
 
 //{{{ Stringutil ---------------------------------------------------------------
 
@@ -268,6 +270,22 @@ class Stringutil {
         static std::string formatUnixTime(const char *formatstring,
                                           time_t value)
         throw ();
+
+#if HAVE_LIBSSL
+
+	/**
+	 * Computes the MD5 and SHA1 digests of a buffer.
+	 *
+	 * @param[in] buf base-64 encoded data to be digested
+	 * @param[in] len length of the base64 input
+	 * @param[out] md5sum resulting MD5 sum
+	 * @param[out] sha1sum resulting SHA1 sum
+	 */
+	static void digest_base64(const void *buf, size_t len,
+				  char *md5sum, char *sha1sum)
+	throw (KError);
+
+#endif	// HAVE_LIBSSL
 };
 
 //}}}
